Primeiro Commit. Criação da pagina padrão

--- a/AlmaVerde/Views/Home/Index.cshtml
+++ b/AlmaVerde/Views/Home/Index.cshtml
@@ -1,8 +1,21 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Alma Verde";
+    ViewData["Subtitle"] = "Consultoria Biológica";
+
 }
 
+
+
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <h1 class="">@ViewData["Title"]</h1>
+
+    <p>A @ViewData["Title"] @ViewData["Subtitle"] surgiu com o objetivos de prestar o melhor atendimento ao seu cliente. Oferecendo uma diversidade de serviços e treinamentos, sempre respeitando o nosso cliente e, principalmente, o meio ambiente. </p>
+
 </div>
+
+
+
+
+
