--- a/AlmaVerde/wwwroot/css/site.css
+++ b/AlmaVerde/wwwroot/css/site.css
@@ -54,3 +54,13 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.banerHome{
+    background-image: url("../imagens/banerHome.jpg");
+    height: auto;
+    background-repeat: no-repeat;
+}
+.teste{
+    height: 540px;
+}
+
